# linkedin-eda

./: .gitignore  LICENSE  README.md  analysis.py  connections_analysis.py  linkedin_api_tests.py  messages_analysis.py  pyproject.toml
classes/: textprocessing.py
data/: Connections.csv  doc.json  messages.csv  profile.json
